--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftCart</title>
     <link rel="shortcut icon" href="Free_Sample_By_Wix.jpg" type="image/x-icon">
+
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="top">
+            <h2>Swift<span>Cart</span></h2>
+            <ul>
+                <li><a href="#">T-shirt's</a></li>
+                <li><a href="#">Jeans</a></li>
+                <li><a href="#">Shirt</a></li>
+                <li><a href="#">Trouser</a></li>
+                <li><a href="#"><i class="ri-shopping-cart-fill"></i></a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
