--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftCart</title>
+
+    <link rel="stylesheet" href="style.css">
+
     <link rel="shortcut icon" href="Free_Sample_By_Wix.jpg" type="image/x-icon">
 
     <link
@@ -14,12 +17,15 @@
     <div class="container">
         <div class="top">
             <h2>Swift<span>Cart</span></h2>
-            <ul>
+            <ul class="top-menu">
                 <li><a href="#">T-shirt's</a></li>
                 <li><a href="#">Jeans</a></li>
                 <li><a href="#">Shirt</a></li>
                 <li><a href="#">Trouser</a></li>
-                <li><a href="#"><i class="ri-shopping-cart-fill"></i></a></li>
+                <li class="menu-logo"><a href="#">
+                    <i class="ri-shopping-cart-fill"></i>
+                    <span class="badge">3</span>
+                </a></li>
             </ul>
         </div>
     </div>
