--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftCart</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&family=Poppins:wght@100&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
     <link rel="shortcut icon" href="Free_Sample_By_Wix.jpg" type="image/x-icon">
 
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
-    rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
+
 <body>
     <div class="container">
         <div class="top">
@@ -23,11 +27,18 @@
                 <li><a href="#">Shirt</a></li>
                 <li><a href="#">Trouser</a></li>
                 <li class="menu-logo"><a href="#">
-                    <i class="ri-shopping-cart-fill"></i>
-                    <span class="badge">3</span>
-                </a></li>
+                        <i class="ri-shopping-cart-fill"></i>
+                        <span class="badge">3</span>
+                    </a></li>
             </ul>
+        </div>
+        <div class="mid">
+            <div class="blank-design">
+                <h2>Winter</h2>
+                <h3>2024</h3>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
