CB 6(image not set at mid)

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </ul>
         </div>
         <div class="mid">
-            <div class="blank-design">
-                <h2>Winter</h2>
-                <h3>2024</h3>
-            </div>
+           <div class="left">
+            <div class="blank"></div>
+           </div>
+           <div class="right"></div>
         </div>
     </div>
 </body>
