--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
         </div>
         <div class="mid">
            <div class="left">
-            <div class="blank"></div>
+            <div class="blank">
+                <h2>winter</h2>
+                <h3>202<span class="number-char">4</span></h3>
+                <div class="buttons">
+                    <button>Explore</button>
+                </div>
+            </div>
            </div>
-           <div class="right"></div>
+           <div class="right">
+            <img src="png-removebg-preview.png" alt="">
+           </div>
         </div>
     </div>
 </body>
