--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
            </div>
            <div class="right">
             <img src="png-removebg-preview.png" alt="">
+
+            <div class="search">
+                <input type="search" placeholder="search">
+                <li><a href="#"><i class="ri-search-line"></i></a></li>
+            </div>
            </div>
         </div>
     </div>
