--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
            </div>
            <div class="right">
             <img src="png-removebg-preview.png" alt="">
-
             <div class="search">
                 <input type="search" placeholder="search">
-                <li><a href="#"><i class="ri-search-line"></i></a></li>
+                <a href="#"><i class="ri-search-line"></i></a>
             </div>
+
+            
            </div>
         </div>
     </div>
