--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <input type="search" placeholder="search">
                 <a href="#"><i class="ri-search-line"></i></a>
             </div>
+            <div class="login">
+                
+            </div>
 
             
            </div>
