--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="#"><i class="ri-search-line"></i></a>
             </div>
             <div class="login">
-                
+                <a href="#"><i class="ri-account-circle-fill"></i></a>
             </div>
 
             
