--- a/index.html
+++ b/index.html
@@ -43,13 +43,25 @@
             </div>
            </div>
            <div class="right">
-            <img src="png-removebg-preview.png" alt="">
+            <img src="redd-f-v6771a4avV4-unsplash-removebg-preview.png" alt="">
             <div class="search">
                 <input type="search" placeholder="search">
                 <a href="#"><i class="ri-search-line"></i></a>
             </div>
             <div class="login">
                 <a href="#"><i class="ri-account-circle-fill"></i></a>
+            </div>
+            <div class="man-hoody">
+                
+                <div class="top-texts">
+                    <h3>Man Hoody</h3>
+                    <h4>Minimalist per-fall 2024</h3>
+                    <h4>Collection</h3>
+                        <li class="arrow">
+                            <a href="#" id="arrow">View  ----<i class="ri-arrow-right-line"></i></a>
+                        </li>
+                </div>
+
             </div>
 
             
