hover on explore

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="top">
             <h2>Swift<span>Cart</span></h2>
             <ul class="top-menu">
-                <li><a href="#">T-shirt's</a></li>
+                <li><a href="#">T.shirt's</a></li>
                 <li><a href="#">Jeans</a></li>
                 <li><a href="#">Shirt</a></li>
                 <li><a href="#">Trouser</a></li>
