--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h4>Minimalist per-fall 2024</h3>
                     <h4>Collection</h3>
                         <li class="arrow">
-                            <a href="#" id="arrow">View  ----<i class="ri-arrow-right-line"></i></a>
+                            <a href="#" id="arrow">View<i class="ri-arrow-right-line"></i></a>
                         </li>
                 </div>
 
