--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
                 <div class="scroll">
                     <h3>Scroll</h3>
                     <h4>Down</h4>
-                    <li><a href="#"></a></li>
+                    <li><a href="#"><i class="ri-mouse-line"></i></a></li>
                 </div>
-                <div class="suit"></div>
+                <div class="suit">
+                    <div class="content-text">
+                        <h3>Man Suit</h3>
+                    <h4>Baddge Gray</h4>
+                    <h5>Cotton Cloth</h5>
+                    </div>
+                    <div class="pricing">
+                        <p>$99.00</p>
+                        <p class="p"><strike>$110.00</strike></p>
+                    </div>
+                    <div class="view">
+                        <li><a href="#">Buy <i class="ri-arrow-right-line"></i></a></li>
+                    </div>
+
+                    
+                </div>
             </div>
 
             
